--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html lang="en">
 <head class=".w3-bar .w3-button"></head>
 <body>
-<iframe src="https://cantechsupport.maps.arcgis.com/apps/instant/lookup/index.html?appid=a82939ee22b14fc19f29c6c493507940" width="400" height="600" frameborder="0" style="border:0" allowfullscreen>iFrames are not supported on this page.</iframe>
+<iframe src="https://cantechsupport.maps.arcgis.com/apps/instant/lookup/index.html?appid=a82939ee22b14fc19f29c6c493507940" width="100%" height="800px" frameborder="0" style="border:0" allowfullscreen>iFrames are not supported on this page.</iframe>
 </body>
 </html>  
